--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,7 +18,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
+a:hover { 
   color: #535bf2;
 }
 
@@ -26,6 +26,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
